[gd_scene load_steps=4 format=3 uid="uid://cf7ciryxnr7b5"]

[ext_resource type="Script" path="res://Cenas/Main/Main Menu/select_menu.gd" id="1_bguvg"]
[ext_resource type="FontFile" uid="uid://rbklwkf6bss0" path="res://Sprites em PNG E GIF/Fonts/vinque rg.otf" id="1_cx8es"]

[sub_resource type="LabelSettings" id="LabelSettings_se0u6"]
font = ExtResource("1_cx8es")
font_size = 18
font_color = Color(0.196078, 0.196078, 0.196078, 1)
outline_size = 4
outline_color = Color(0.188235, 0.376471, 0.509804, 1)

[node name="Select_menu" type="CanvasLayer"]
script = ExtResource("1_bguvg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 320.0
color = Color(0.219608, 0.219608, 0.219608, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.5
offset_top = 38.0
offset_right = 160.5
offset_bottom = 61.0
grow_horizontal = 2
text = "Select the period of time you want to live!"
label_settings = SubResource("LabelSettings_se0u6")

[node name="Level_1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -64.5
offset_right = -100.0
offset_bottom = -33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.196078, 0.196078, 0.196078, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.188235, 0.376471, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_cx8es")
text = "Level 1"
flat = true

[node name="Level_2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -64.5
offset_right = -30.0
offset_bottom = -33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.196078, 0.196078, 0.196078, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.188235, 0.376471, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_cx8es")
text = "Level 2"
flat = true

[node name="Prototype" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 88.5
offset_top = -64.5
offset_right = 165.5
offset_bottom = -35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.196078, 0.196078, 0.196078, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.188235, 0.376471, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_cx8es")
text = "Prototype"
flat = true

[connection signal="pressed" from="Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Prototype" to="." method="_on_prototype_pressed"]
